[project]
name = "hyper-clipboard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yama-yeah", email = "b1021091@fun.ac.jp" }
]
dependencies = [
    "pyperclip>=1.8.2",
    "simplepyble>=0.7.1",
    "bleak>=0.21.1",
    "bless>=0.2.6",
    "sqids>=0.4.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "hyper_clipboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hyper_clipboard","src/pysetupdi"]
