[project]
name = "hyper-clipboard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yama-yeah", email = "b1021091@fun.ac.jp" }
]
dependencies = [
    "pyperclip>=1.8.2",
    "simplepyble>=0.7.1",
    "sqids>=0.4.1",
    "better-loggers>=1.0.1",
    "nest_asyncio>=1.6.0",
    "frozendict>=2.4.0",
    "bleak>=0.21.1",
    "bless @ git+https://github.com/yama-yeah/bless",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hyper-clipboard = "hyper_clipboard:main"
hyper-settings = "hyper_clipboard:setting"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hyper_clipboard","src/pysetupdi"]
